--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rabbit_mq_project",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/abdul-kodir2020/rabbit_mq_project#readme",
   "dependencies": {
-    "amqplib": "^0.10.8"
+    "amqplib": "^0.10.8",
+    "dotenv": "^16.5.0"
   }
 }
