--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/abdul-kodir2020/rabbit_mq_project#readme",
   "dependencies": {
     "amqplib": "^0.10.8",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0"
   }
 }
