--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   "homepage": "https://github.com/abdul-kodir2020/rabbit_mq_project#readme",
   "dependencies": {
     "amqplib": "^0.10.8",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1"
   }
 }
