--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
     build: ./rabbitmq
     command: node ./backend/server.js
     ports:
-      - "3000:3000"
+      - "4000:4000"
     env_file:
       - ./rabbitmq/.env
     depends_on:
@@ -35,10 +35,11 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        REACT_APP_BACKEND_URL: http://localhost:4000
+        REACT_APP_WS_URL: ws://localhost:4000
     ports:
       - "8080:80"
-    env_file:
-      - ./frontend/.env
     depends_on:
       - backend
 
